--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-GROQ_API_KEY=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
+GROQ_API_KEY=*************************
 
-# export GROQ_API_KEY=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
-# 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
+# export GROQ_API_KEY=******************************
